Added burger button

--- a/index.html
+++ b/index.html
@@ -31,12 +31,27 @@
                 </ul>
             </div>
         </div>
+        <div class="menu_burger" id="mobile-btn">
+            <div class="burger_container" onclick="burgerOpen(this)" >
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+        </div>
         <div class="header_item">
             <div class="header_links">
                 <a href="#" class="button_light">Sing In</a>
                 <a href="#" class="button_dark">Sing Up</a>
             </div>
         </div>
+    </div>
+    <div class="left_side_menu">
+        <ul class="left_menu" id="my_links">
+            <li><a href="#" class="active">About</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Benefits</a></li>
+        </ul>
     </div>
 </header>
 <!--End Header-->
