Update media query

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 </head>
 <body>
+
 <!--Start Header-->
 <header>
     <div class="header_container container">
@@ -73,7 +74,7 @@
                 <img src="img/video.png" alt="img">
             </div>
             <div class="video_text">
-                <p class="video_content">The harder you work for something, the greater you’ll feel when you achieve it.</p>
+                <p class="video_content">The harder you work for something, the greater <br> you’ll feel when you achieve it.</p>
                 <span class="video_info">Watch preview</span>
             </div>
         </div>
@@ -110,27 +111,24 @@
             <h4>Open Game</h4>
             <p>Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.
             </p>
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam at doloremque esse quam recusandae, suscipit tempora voluptate. Aliquam commodi expedita itaque nemo optio, praesentium tempore temporibus tenetur voluptatem voluptates!</p>-->
         </div>
-</div>
+    </div>
     <div class="advice_info_row container">
         <div class="advice_text">
             <h4>Open Game</h4>
             <p>Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.
             </p>
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam at doloremque esse quam recusandae, suscipit tempora voluptate. Aliquam commodi expedita itaque nemo optio, praesentium tempore temporibus tenetur voluptatem voluptates!</p>-->
         </div>
         <div class="advice_text">
             <h4>Open Game</h4>
             <p>Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.
             </p>
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam at doloremque esse quam recusandae, suscipit tempora voluptate. Aliquam commodi expedita itaque nemo optio, praesentium tempore temporibus tenetur voluptatem voluptates!</p>-->
         </div>
         <div class="advice_text">
             <h4>Open Game</h4>
             <p>Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.
             </p>
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam at doloremque esse quam recusandae, suscipit tempora voluptate. Aliquam commodi expedita itaque nemo optio, praesentium tempore temporibus tenetur voluptatem voluptates!</p>-->
+
         </div>
     </div>
 </section>
@@ -139,7 +137,7 @@
 <section class="traffic">
     <div class="traffic_info container">
         <div class="traffic_text">
-            <h3>Increase your <br> business <span class="color_text">traffic</span> </h3>
+            <h3>Increase your business <span class="color_text">traffic</span> </h3>
             <p>We are committed to processing the information in order to <br> contact you and talk about your project. </p>
             <a href="#" class="traffic_button">Learn More</a>
         </div>
@@ -194,7 +192,7 @@
             <p>We are committed to processing the information in order to contact you and talk about your project. We are committed to processing the information. </p>
             <a href="#" class="invest_button">Learn More</a>
         </div>
-        <div class="traffic_image">
+        <div class="invest_image">
             <img src="img/Group%206.png" alt="img">
         </div>
     </div>
@@ -204,8 +202,10 @@
 <!--Start Help Section-->
 <section class="help">
     <div class="help_info container">
-        <div class="help_image">
-            <img src="img/Bitmap%20(3).png"  alt="group">
+        <div class="help_image_container">
+            <div class="help_image">
+                <img src="img/Bitmap%20(3).png"  alt="group">
+            </div>
         </div>
         <div class="help_text">
             <h3>Help Finding Information Online</h3>
